tests/errors/runtime.WrongArgumentType.2.art
; adding something
print 1+2

; adding something else
print add 1 "done"